Add ReferenceRoom service, controller and Implement file upload/download